# Graph-Self-Supervised-Learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
demo/: app.py
scripts/: demonstrate.py  quick_start.py
src/: __init__.py
src/eval/: __init__.py  evaluator.py
src/models/: __init__.py  encoders.py  ssl_models.py
src/train/: __init__.py  main.py  trainer.py
src/utils/: __init__.py  data_utils.py  device.py
tests/: test_models.py
